Added a script consisting of SQL commands.

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@ node_modules
 .idea
 public/uploads/*
 !public/uploads/.gitkeep
+!public/uploads/xgT5z6z5rR7Wbk163KkRo.png
+!public/uploads/C739GNPUUoZFQNu08kKCl.png
