--- a/.gitignore
+++ b/.gitignore
@@ -2,5 +2,6 @@ node_modules
 .idea
 public/uploads/*
 !public/uploads/.gitkeep
-!public/uploads/xgT5z6z5rR7Wbk163KkRo.png
-!public/uploads/C739GNPUUoZFQNu08kKCl.png
+!public/uploads/GHfoilU6B1fc4uEFapGJZ.jpg
+!public/uploads/QEXKw95r-jtqv9yVeV9xv.jpeg
+!public/uploads/Ft4S7zXWtwJjt-eHlSYPu.jpeg
